[package]
name = "toolkit"
version = "0.1.0"
authors = ["Yakov Borevich <j.borevich@gmail.com>"]
edition = "2018"
license = "MIT"


[dependencies]
clap = "3.0.0-beta.2"
zip = "0.5"
walkdir = "2.3.1"
serde = { version = "1.0.123", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.11.1", features = ["blocking"] }
glob = "0.3.0"
dirs = "3.0.1"