[package]
name = "zipfile"
version = "0.1.0"
authors = ["Yakov Borevich <j.borevich@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "zipfile"
path = "src/lib.rs"
crate-type = ["dylib"]

[dependencies]
#libc = "0.2.0"
wchar = "0.6.1"
zip = "0.5"
walkdir = "2.3.1"
#lazy_static = "1.4.0"
